# clover2

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  .pkr.hcl  .pre-commit-config.yaml  Makefile  README.md  Taskfile.yaml  docker-bake.hcl  docker-compose.yaml  localization_template.cpp  taskfile.yaml
clover2_aruco/clover2_aruco/: CMakeLists.txt  package.xml
clover2_aruco/clover2_aruco/include/clover2_aruco/: detector.hpp  map_client.hpp  map_server.hpp  tracker.hpp
clover2_aruco/clover2_aruco/map/: example.json  example.yaml
clover2_aruco/clover2_aruco/map/legacy/: example.txt
clover2_aruco/clover2_aruco/src/: detector.cpp
clover2_aruco/clover2_aruco/src/detector/: detector.cpp  main.cpp
clover2_aruco/clover2_aruco/src/map_server/: main.cpp  map_server.cpp
clover2_aruco/clover2_aruco/src/tracker/: tracker.cpp
clover2_aruco/clover2_aruco/src/utils/: map_io.cpp
clover2_aruco/clover2_aruco/test/: test_detector.cpp  unittest_detector.cpp
clover2_aruco/clover2_aruco_msgs/: CMakeLists.txt  package.xml
clover2_aruco/clover2_aruco_msgs/msg/: Marker.msg  MarkerMap.msg  MarkerVisual.msg
clover2_aruco/clover2_aruco_msgs/srv/: GetMap.srv
clover2_aruco/clover2_odometry/: CMakeLists.txt  package.xml
clover2_aruco/clover2_odometry/include/clover2_odometry/: mono_visual_odometry.hpp
clover2_aruco/clover2_odometry/src/: main.cpp  mono_visual_odometry.cpp
clover2_backend/: CMakeLists.txt  package.xml
clover2_backend/include/clover2/backend/: app.hpp  server.hpp
clover2_backend/src/: main.cpp
clover2_backend/src/backend/: app.cpp  server.cpp
clover2_backend/src/backend/model/: action_info.cpp  node_info.cpp  nodes.cpp  service_info.cpp  topic_info.cpp
clover2_bringup/: CMakeLists.txt  package.xml
clover2_bringup/clover2_bringup/: __init__.py  klever5.py
clover2_bringup/clover2_bringup/actions/: __init__.py  base.py  cam_feature.py  camera.py  libcamera.py  localization.py  optical_flow.py  resource.py  stack.py
clover2_bringup/clover2_bringup/configs/: __init__.py  camera.py  fcu_bridge.py  localization.py  map_server.py  optical_flow.py  tracker.py
clover2_bringup/launch/: camera.launch.py  clover2.launch.py  clover2_actions.launch.py  fcu_bridge.launch.py  navigation.launch.py  web_support.launch.py
clover2_bringup/params/: clover5.yaml
clover2_bringup/params/libcamera/: imx219.yaml  ov5647.yaml
clover2_common/: CMakeLists.txt  package.xml
clover2_common/cmake/: clover2_common_macros.cmake
clover2_common/include/clover2/common/: executor.hpp  lifecycle_node.hpp  node.hpp  node_context.hpp  parameter_watcher.hpp  rclcpp_trails.hpp
clover2_common/include/clover2_common/: executor.hpp  lifecycle_node.hpp  node.hpp  node_context.hpp  parameter_watcher.hpp
clover2_common/include/clover2_common/util/: parameter.hpp  time_buffer.hpp
clover2_common/src/: executor.cpp  lifecycle_node.cpp  node.cpp  parameter_watcher.cpp
clover2_fcu_bridge/: CMakeLists.txt  package.xml
clover2_fcu_bridge/include/clover2/fcu_bridge/: offboard.hpp  server.hpp
clover2_fcu_bridge/scripts/: call_set_position.py
clover2_fcu_bridge/src/: main.cpp
clover2_fcu_bridge/src/lib/: offboard.cpp  server.cpp
clover2_loc/clover2_aruco/: CMakeLists.txt
clover2_loc/clover2_cam_feature/: CMakeLists.txt  package.xml
clover2_loc/clover2_cam_feature/src/: base_plugin.cpp  cam_feature.cpp
clover2_loc/clover2_optical_flow/: package.xml
clover2_loc/clover2_optical_flow/src/: optical_flow.cpp
clover2_loc/clover2_pose_msgs/: CMakeLists.txt
clover2_loc/clover2_pose_msgs/msg/: Marker.msg
clover2_nav/clover2_aruco/: CMakeLists.txt  package.xml
clover2_nav/clover2_aruco/map/: example-1.yaml
clover2_nav/clover2_aruco/src/: detector.cpp  map_server.cpp  tracker.cpp
clover2_nav/clover2_aruco/test/: unittest_detector.cpp
clover2_nav/clover2_cam_feature/: CMakeLists.txt  package.xml  plugins.xml
clover2_nav/clover2_cam_feature/params/: aruco.yaml
clover2_nav/clover2_cam_feature/src/: cam_feature.cpp  main.cpp
clover2_nav/clover2_localization/: CMakeLists.txt  package.xml
clover2_nav/clover2_localization/plugins/: sensors_plugins.xml
clover2_nav/clover2_localization/src/: main.cpp
clover2_nav/clover2_localization_msgs/: CMakeLists.txt  package.xml
clover2_nav/clover2_localization_msgs/msg/: Feature3.msg  Landmark.msg  LandmarkInfo.msg  LandmarkMap.msg  Makrker.msg  Observation.msg  ObservationArray.msg
clover2_nav/clover2_localization_msgs/src/: helpers.cpp
clover2_nav/clover2_localization_msgs/srv/: GetMap.srv
clover2_nav/clover2_map/: CMakeLists.txt  package.xml
clover2_nav/clover2_map/map/: example-1.yaml  simulation.yaml
clover2_nav/clover2_map_server/: CMakeLists.txt  package.xml
clover2_nav/clover2_map_server/map/: example-1.yaml
clover2_nav/clover2_map_server/src/: main.cpp
clover2_nav/clover2_mavros/: CMakeLists.txt  mavros_plugins.xml  package.xml
clover2_nav/clover2_optical_flow/: CMakeLists.txt
clover2_nav/clover2_optical_flow/src/: main.cpp  optical_flow.cpp
clover2_nav/clover2_pose_msgs/: package.xml
clover2_nav/clover2_pose_msgs/msg/: MarkerArray.msg  MarkerMap.msg
clover2_nav/clover2_pose_msgs/src/: marker.cpp
clover2_nav/clover2_pose_msgs/srv/: GetMap.srv
clover2_offboard/: CMakeLists.txt  package.xml
clover2_offboard/include/clover2_offboard/: helper.hpp  server.hpp
clover2_offboard/scripts/: call_set_position.py
clover2_offboard/src/: helper.cpp  main.cpp  offboard_node.cpp  server.cpp
clover2_offboard/src/backend/: base_backend.cpp  fabric.cpp  mavros.cpp
clover2_offboard/src/data/: mode.cpp
clover2_offboard/src/offboard/: assistant.cpp  client.cpp
clover2_sim/clover2_gz_sim/: CMakeLists.txt  package.xml  setup.cfg  setup.py
clover2_sim/clover2_gz_sim/config/: clover5.yaml  server.conf.xml
clover2_sim/clover2_gz_sim/launch/: gazebo.launch.py  sim.launch.py  spawn.launch.py
clover2_sim/clover2_gz_sim/worlds/: aruco.sdf  simple.sdf
optical_flow/: CMakeLists.txt  package.xml
optical_flow/include/optical_flow/: optical_flow.hpp
optical_flow/src/: optical_flow.cpp
(+582 files in other folders)
