<?xml version="1.0" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clover2_bringup</name>
  <version>0.0.0</version>
  <description
    >Clover2 launch system — actions-based bringup with CameraAction, LocalizationAction, Clover2Stack</description>
  <maintainer email="2663161@mail.ru">l_motya</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>clover2</depend>
  <depend>clover2_aruco</depend>
  <depend>clover2_cam_feature</depend>
  <depend>clover2_fcu_bridge</depend>
  <depend>clover2_map</depend>
  <depend>clover2_optical_flow</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
