<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clover2_optical_flow</name>
  <version>0.0.0</version>
  <description>Optical flow calculation using phase correlation</description>
  <maintainer email="2663161@mail.ru">l_motya</maintainer>
  <license>TODO: License declaration</license>

  <author email="2663161@mail.ru">l_motya</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>clover2_common</depend>
  <depend>cv_bridge</depend>
  <depend>diagnostic_updater</depend>
  <depend>geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>mavros_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
